<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/label_shopping_list"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView_app_label">

        <TextView
            android:id="@+id/textView_shop_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

        <TextView
            android:id="@+id/textView_shop_item10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default" />

    </LinearLayout>

    <Button
        android:id="@+id/button_clear_shopping_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_marginStart="32dp"
        android:onClick="clearShoppingList"
        android:text="@string/button_clear_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_open_shopping_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:onClick="openItemList"
        android:text="@string/button_add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear_shopping_list" />

    <Button
        android:id="@+id/button_find_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="findShopOnMap"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/button_find"
        app:layout_constraintBottom_toTopOf="@+id/button_open_shopping_list"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_shop_name"
        app:layout_constraintBottom_toTopOf="@+id/editText_shop_name"
        app:layout_constraintStart_toStartOf="@+id/editText_shop_name" />

    <EditText
        android:id="@+id/editText_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:ems="6"
        android:hint="@string/hint_shop_name"
        android:inputType="textPersonName"
        android:text="@string/default_shop_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_find_shop" />

    <TextView
        android:id="@+id/textView_shop_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_city"
        app:layout_constraintBottom_toTopOf="@+id/editText_shop_city"
        app:layout_constraintStart_toStartOf="@+id/editText_shop_city" />

    <EditText
        android:id="@+id/editText_shop_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:hint="@string/hint_city"
        android:inputType="textPersonName"
        android:text="@string/default_shop_city"
        app:layout_constraintEnd_toStartOf="@+id/button_find_shop"
        app:layout_constraintStart_toEndOf="@+id/editText_shop_name"
        app:layout_constraintTop_toTopOf="@+id/button_find_shop" />


</androidx.constraintlayout.widget.ConstraintLayout>